--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
 		<title>SquarePowered</title>
 		<style type="text/css">
-			@import url(@import url(http://fonts.googleapis.com/css?family=Merriweather:900,300););
+			@import url(http://fonts.googleapis.com/css?family=Merriweather:900,300);
 
 			* {
 				font-family: "Merriweather";
